# Sales-Conversation-Analizer

./: .gitignore  Dockerfile  MULTI_FILE_PROCESSING.md  app.py  config.env.example  ejecutar.bat  main.py  pyproject.toml  test_opus_conversion.py
.claude/: settings.local.json
input_data/Chat de WhatsApp con Hermano/: Chat de WhatsApp con Hermano.txt  PTT-20250820-WA0094.opus  PTT-20250910-WA0006.opus
input_data/whatsapp_chats/: Chat.txt  PTT-20231220-WA0020.opus  PTT-20231220-WA0021.opus  PTT-20250715-WA0052.opus  PTT-20250715-WA0053.opus  PTT-20250716-WA0002.opus  PTT-20250725-WA0040.opus
src/: __init__.py  analizer.py  config.py  conversation_processor.py  image_processor.py  multi_file_processor.py  processing_job.py  text_processor.py  timestamp_parser.py  whisper_transcriber.py
