[project]
name = "conversation-analizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg>=1.4",
    "ipykernel>=6.30.1",
    "openai>=1.107.1",
    "opuslib>=3.0.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "streamlit>=1.49.1",
]
